--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="song-list">
             <h3>Playlist</h3>
             <!-- Place your song files and images in the same directory as this HTML file or update the paths below -->
-            <button onclick="playSong('music/song1.mp3', 'Song 1', 'https://i.scdn.co/image/ab67616d00001e023c9eacdaea1e08ed52b3c0cd')">Song 1</button>
+            <button onclick="playSong('/song1.mp3', 'Song 1', 'https://i.scdn.co/image/ab67616d00001e023c9eacdaea1e08ed52b3c0cd')">Song 1</button>
             <button onclick="playSong('/music/song2.mp3', 'Song 2', 'images/song2.jpg')">Song 2</button>
             <button onclick="playSong('/music/song3.mp3', 'govyachya kinaryavar', '/music/song33.jpg')">govyachya kinaryavar</button>
         </div>
