--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </style>
 </head>
 <body>
-    <header>
+<!--     <header>
         <h1>My Music Player</h1>
     </header>
     <div class="container">
@@ -90,7 +90,8 @@
             <button onclick="playSong('/music/song2.mp3', 'Song 2', 'images/song2.jpg')">Song 2</button>
             <button onclick="playSong('/music/song3.mp3', 'govyachya kinaryavar', '/music/song33.jpg')">govyachya kinaryavar</button>
         </div>
-    </div>
+    </div> -->
+    <img scr="/song33.jpg">
     <!-- <footer>
         <p>&copy; 2024 My Music Player. All rights reserved.</p>
     </footer> -->
