--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <style>
   body{background-color: yellow}, 
    <<button type="color"></button>
+    img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin-top: 20px;
+        }
   </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +19,7 @@
 
 <body>
   <audio controls>
+    <img="https://static.vecteezy.com/system/resources/previews/009/025/207/non_2x/aai-calligraphy-in-marathi-free-vector.jpg"
   <source src="song1.mp3" type="audio/mpeg">
 </audio>
 </body>
