--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <audio controls>
-    <img="https://static.vecteezy.com/system/resources/previews/009/025/207/non_2x/aai-calligraphy-in-marathi-free-vector.jpg">
+    <img="https://i1.sndcdn.com/artworks-000168698253-tr3h9a-t500x500.jpg">
   <source src="song1.mp3" type="audio/mpeg">
 </audio>
 </body>
