--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <style>
   body{background-color: yellow}, 
    <<button type="color"></button>
-    img {
+/*     img {
             max-width: 100%;
             height: auto;
             border-radius: 8px;
             margin-top: 20px;
-        }
+        } */
   </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
