--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <img="https://i1.sndcdn.com/artworks-000168698253-tr3h9a-t500x500.jpg">
+    <img src="https://i1.sndcdn.com/artworks-000168698253-tr3h9a-t500x500.jpg">
   <audio controls>
   <source src="song1.mp3" type="audio/mpeg">
 </audio>
