--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button class="control-btn" id="next">⏭️</button>
     </div>
   </div>
-     <audio id="audio" src="song1.mp3"></audio>
+     <audio id="audio" src="audio/song1.mp3"></audio>
   <script src="script.js"></script>
 </body>
 </html>
