--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MY Music</title>
+  <title>Spotify Music Banner</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="search-container">
+    <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
+    <button id="search-btn">🔍</button>
+  </div>
+
   <div class="music-banner">
     <div class="cover">
       <img id="cover-image" src="cover1.jpg" alt="Album Cover">
