--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <div class="search-container">
+      <a href="#about">About</a>
+  <a href="#contact">Contact</a>
     <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
     <button id="search-btn">🔍</button>
   </div>
