--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 <body>
   <div class="search-container">
     <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
+    <ul id="myMenu">
+  <li><a href="#">HTML</a></li>
+  <li><a href="#">CSS</a></li>
+  <li><a href="#">JavaScript</a></li>
+  <li><a href="#">PHP</a></li>
+  <li><a href="#">Python</a></li>
+  <li><a href="#">jQuery</a></li>
+  <li><a href="#">SQL</a></li>
+  <li><a href="#">Bootstrap</a></li>
+  <li><a href="#">Node.js</a></li>
+</ul>
     <button id="search-btn">🔍</button>
   </div>
 
