--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Music Player</title>
-  <link rel="icon" type="image/png" href="https://imgs.search.brave.com/9rPZ505YwjDmq4OilkqaH9mPX-jH5h6u4S_PVPkqXno/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9wbHVz/cG5nLmNvbS9pbWct/cG5nL3Nwb3RpZnkt/bG9nby1wbmctb3Bl/bi0yMDAwLnBuZw">
+  <link rel="icon" type="image/webp" href="music/music">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
