--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       <button class="control-btn play" id="play-pause">▶️</button>
       <button class="control-btn" id="next">⏭️</button>
     </div>
+    <div class="progress-container">
+  <div class="progress-bar" id="progress-bar"></div>
+</div>
+
   </div>
 
   <!-- Audio Tag -->
