--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
       <button class="control-btn play" id="play-pause">▶️</button>
       <button class="control-btn" id="next">⏭️</button>
     </div>
-   
+<div class="progress-container">
+  <span id="current-time">0:00</span>
+  <div id="progress-bar">
+    <div id="progress"></div>
   </div>
+  <span id="duration">0:00</span>
+</div>
 
   <!-- Audio Tag -->
   <audio id="audio"></audio>
