--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="search-container">
-    <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
-    <button id="search-btn">🔍</button>
-  </div>
+<div class="search-container">
+  <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
+  <button id="search-btn">🔍</button>
+  <ul id="suggestions-list"></ul>
+</div>
+
 
   <div class="music-banner">
     <div class="cover">
