--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
       <button class="control-btn play" id="play-pause">▶️</button>
       <button class="control-btn" id="next">⏭️</button>
     </div>
+<div class="controls">
+  <button id="shuffle-btn">🔀</button>
+  <button id="repeat-btn">🔁</button>
+  <button id="like-btn">❤️</button>
+</div>
 
   <!-- Audio Tag -->
   <audio id="audio"></audio>
