--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
   <!-- Audio Tag -->
   <audio id="audio"></audio>
 
-  <script src="script.js"></script>
+ <script type="module">
+import message from "./songs.js";
+</script>
 </body>
 </html>
