--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
   <!-- Audio Tag -->
   <audio id="audio"></audio>
 
- <script type="module">
-import message from "./songs.js";
+<script type="module" src="main.js"></script>
 </script>
 </body>
 </html>
