--- a/index.html
+++ b/index.html
@@ -29,17 +29,15 @@
     <div id="progress"></div>
   </div>
   <span id="duration">0:00</span>
-</div>
-    <div class="controls">
-      <button class="control-btn" id="prev">⏮️</button>
-      <button class="control-btn play" id="play-pause">▶️</button>
-      <button class="control-btn" id="next">⏭️</button>
-    </div>
 <div class="controls">
+  <button id="prev">⏮️</button>
+  <button id="play-pause">▶️</button>
+  <button id="next">⏭️</button>
   <button id="shuffle-btn">🔀</button>
   <button id="repeat-btn">🔁</button>
-  <button id="like-btn">❤️</button>
+  <button id="download-btn">⬇️ Download</button>
 </div>
+
 
   <!-- Audio Tag -->
   <audio id="audio"></audio>
