--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <button id="prev">⏮️</button>
   <button id="play-pause">▶️</button>
   <button id="next">⏭️</button>
+</div>
+<div>
   <button id="shuffle-btn">🔀</button>
   <button id="repeat-btn">🔁</button>
   <button id="download-btn">⬇️ Download</button>
