--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
     <div id="progress"></div>
   </div>
   <span id="duration">0:00</span>
-  <div>
-      <button id="prev">⏮️</button>
-      <button id="play-pause">▶️</button>
-      <button id="next">⏭️</button>
-      <button id="shuffle-btn">🔀</button>
-      <button id="repeat-btn">🔁</button>
+<div class="controls">
+  <button id="prev">⏮️</button>
+  <button id="play-pause">▶️</button>
+  <button id="next">⏭️</button>
     </div>
+  <div class="controls">
+  <button id="shuffle-btn">🔀</button>
+  <button id="repeat-btn">🔁</button>
+  <button id="like-btn">❤️</button>
+</div>
+
 
 
   <!-- Audio Tag -->
