--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
   <button id="prev">⏮️</button>
   <button id="play-pause">▶️</button>
   <button id="next">⏭️</button>
-    </div>
-  <div class="controls">
+</div>
+
+<div class="secondary-controls">
   <button id="shuffle-btn">🔀</button>
   <button id="repeat-btn">🔁</button>
   <button id="like-btn">❤️</button>
 </div>
+
 
 
 
