--- a/index.html
+++ b/index.html
@@ -37,11 +37,13 @@
     <button id="next" class="control-btn">⏭️</button>
   </div>
 
-  <div class="secondary-controls">
-    <button id="shuffle-btn">🔀</button>
-    <button id="repeat-btn">🔁</button>
-    <button id="like-btn">❤️</button>
-  </div>
+ <!-- Replace the Like button with Download button -->
+<div class="secondary-controls">
+  <button id="shuffle-btn">🔀</button>
+  <button id="repeat-btn">🔁</button>
+  <button id="download-btn">⬇️</button> <!-- New Download Button -->
+</div>
+
 </div>
 
 <audio id="audio"></audio>
