--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     <!-- Playlist Display Section -->
     <div id="playlist-container">
         <div id="playlist-name">Hindi Playlist</div>
-        <img id="cover-image" src="path/to/default/image.jpg" alt="Cover Image">
-    </div>
-
-    <!-- Playlist Selection Buttons -->
-    <div>
-        <button id="hindi-btn" class="control-button">Hindi</button>
-        <button id="english-btn" class="control-button">English</button>
-        <button id="marathi-btn" class="control-button">Marathi</button>
+        <div id="image-container">
+            <img id="cover-image" src="path/to/default/image.jpg" alt="Cover Image">
+            <!-- Playlist Buttons on top of the image -->
+            <div class="playlist-buttons">
+                <button id="hindi-btn" class="control-button">Hindi</button>
+                <button id="english-btn" class="control-button">English</button>
+                <button id="marathi-btn" class="control-button">Marathi</button>
+            </div>
+        </div>
     </div>
 
     <!-- Music Controls -->
