--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="playlist-name">Hindi Playlist</div>
         <div id="image-container">
             <img id="cover-image" src="path/to/default/image.jpg" alt="Cover Image">
-            <!-- Playlist Buttons on top of the image -->
+            <!-- Playlist Buttons positioned on top of the image -->
             <div class="playlist-buttons">
                 <button id="hindi-btn" class="control-button">Hindi</button>
                 <button id="english-btn" class="control-button">English</button>
