--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="secondary-controls">
   <button id="shuffle-btn">🔀</button>
   <button id="repeat-btn">🔁</button>
-  <button id="download-btn">⬇️</button> <!-- New Download Button -->
+  <button id="downloadbtn">⬇️</button> <!-- New Download Button -->
 </div>
 
 </div>
