--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
  <!-- Playlist Display Section -->
     <div id="playlist-container">
         <div id="playlist-name">Hindi Playlist</div>
-        <div id="image-container">
-            <img id="cover-image" src="path/to/default/image.jpg" alt="Cover Image">
+<!--         <div id="image-container">
+            <img id="cover-image" src="path/to/default/image.jpg" alt="Cover Image"> -->
             <!-- Playlist Buttons positioned on top of the image -->
             <div class="playlist-buttons">
                 <button id="hindi-btn" class="control-button">Hindi</button>
