--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <span id="duration">0:00</span>
   </div>
  <!-- Playlist Display Section -->
-    <div id="playlist-container">
+<!--     <div id="playlist-container">
         <div id="playlist-name">Hindi Playlist</div>
-<!--         <div id="image-container">
+<!--         <div id="image-container"> -->
             <img id="cover-image" src="path/to/default/image.jpg" alt="Cover Image"> -->
             <!-- Playlist Buttons positioned on top of the image -->
             <div class="playlist-buttons">
