--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 </div>
 
 <div class="music-banner">
-  <div class="cover">
-    <img id="cover-image" src="cover1.jpg" alt="Album Cover">
+  <div id="playlist-container">
+    <div id="image-container">
+      <img id="cover-image" src="cover1.jpg" alt="Album Cover">
+    </div>
+    <!-- Playlist Buttons positioned on top of the image -->
+    <div class="playlist-buttons">
+      <button id="hindi-btn" class="control-button">Hindi</button>
+      <button id="english-btn" class="control-button">English</button>
+      <button id="marathi-btn" class="control-button">Marathi</button>
+    </div>
   </div>
+
   <div class="song-details">
     <h2 id="song-title">Song Title 1</h2>
     <p id="artist-name">Artist Name 1</p>
@@ -31,26 +40,18 @@
     <span id="duration">0:00</span>
   </div>
 
-            <!-- Playlist Buttons positioned on top of the image -->
-            <div class="playlist-buttons">
-                <button id="hindi-btn" class="control-button">Hindi</button>
-                <button id="english-btn" class="control-button">English</button>
-                <button id="marathi-btn" class="control-button">Marathi</button>
-            </div>
-        </div>
-    </div>
   <div class="controls">
     <button id="prev" class="control-btn">⏮️</button>
     <button id="play-pause" class="control-btn play">▶️</button>
     <button id="next" class="control-btn">⏭️</button>
   </div>
 
- <!-- Replace the Like button with Download button -->
-<div class="secondary-controls">
-  <button id="shuffle-btn">🔀</button>
-  <button id="repeat-btn">🔁</button>
-  <button id="download-btn">⬇️</button> <!-- New Download Button -->
-</div>
+  <!-- Replace the Like button with Download button -->
+  <div class="secondary-controls">
+    <button id="shuffle-btn">🔀</button>
+    <button id="repeat-btn">🔁</button>
+    <button id="download-btn">⬇️</button> <!-- New Download Button -->
+  </div>
 
 </div>
 
