--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 </div>
 
 <div class="music-banner">
-  <div id="playlist-container">
-    <div id="image-container">
-      <img id="cover-image" src="cover1.jpg" alt="Album Cover">
-    </div>
-    <div class="playlist-buttons">
-  <button id="hindi-btn" class="control-button">Hindi</button>
-  <button id="english-btn" class="control-button">English</button>
-  <button id="marathi-btn" class="control-button">Marathi</button>
-</div>
-
+  <!-- Playlist buttons -->
+  <div class="playlist-container">
+    <button id="hindi-btn" class="playlist-btn">Hindi</button>
+    <button id="english-btn" class="playlist-btn">English</button>
+    <button id="marathi-btn" class="playlist-btn">Marathi</button>
   </div>
 
+  <!-- Cover image and song details -->
+  <div class="cover">
+    <img id="cover-image" src="cover1.jpg" alt="Album Cover">
+  </div>
   <div class="song-details">
     <h2 id="song-title">Song Title 1</h2>
     <p id="artist-name">Artist Name 1</p>
   </div>
 
+  <!-- Progress bar -->
   <div class="progress-container">
     <span id="current-time">0:00</span>
     <div id="progress-bar">
@@ -40,19 +40,19 @@
     <span id="duration">0:00</span>
   </div>
 
+  <!-- Controls -->
   <div class="controls">
     <button id="prev" class="control-btn">⏮️</button>
     <button id="play-pause" class="control-btn play">▶️</button>
     <button id="next" class="control-btn">⏭️</button>
   </div>
 
-  <!-- Replace the Like button with Download button -->
+  <!-- Secondary controls -->
   <div class="secondary-controls">
     <button id="shuffle-btn">🔀</button>
     <button id="repeat-btn">🔁</button>
-    <button id="download-btn">⬇️</button> <!-- New Download Button -->
+    <button id="download-btn">⬇️</button>
   </div>
-
 </div>
 
 <audio id="audio"></audio>
