--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Music Player</title>
-  <link rel="icon" type="image/webp" href="music/musiclogo.webp">
+  <link rel="icon" type="image/webp" href="music/music45.webp">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
