--- a/index.html
+++ b/index.html
@@ -3,22 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Music Player</title>
+  <title>Music45</title>
   <link rel="icon" type="image/webp" href="music/music45.webp">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
 <div class="search-container">
-  <input type="text" id="search-bar" placeholder="Search for a song or artist...">
+  <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
   <button id="search-btn">🔍</button>
   <ul id="suggestions-list"></ul>
-</div>
-
-<div class="playlist-buttons">
-  <button id="hindi-btn">Hindi</button>
-  <button id="english-btn">English</button>
-  <button id="marathi-btn">Marathi</button>
 </div>
 
 <div class="music-banner">
@@ -44,11 +37,13 @@
     <button id="next" class="control-btn">⏭️</button>
   </div>
 
-  <div class="secondary-controls">
-    <button id="shuffle-btn">🔀</button>
-    <button id="repeat-btn">🔁</button>
-    <button id="download-btn">⬇️</button>
-  </div>
+ <!-- Replace the Like button with Download button -->
+<div class="secondary-controls">
+  <button id="shuffle-btn">🔀</button>
+  <button id="repeat-btn">🔁</button>
+  <button id="download-btn">⬇️</button> <!-- New Download Button -->
+</div>
+
 </div>
 
 <audio id="audio"></audio>
