--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <ul id="suggestions-list"></ul>
 </div>
 
+   <div class="playlist-buttons">
+                <button id="hindi-btn" class="control-button">Hindi</button>
+                <button id="english-btn" class="control-button">English</button>
+                <button id="marathi-btn" class="control-button">Marathi</button>
+            </div>
+  
 <div class="music-banner">
   <div class="cover">
     <img id="cover-image" src="cover1.jpg" alt="Album Cover">
