--- a/index.html
+++ b/index.html
@@ -8,58 +8,58 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="search-container">
-    <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
-    <button id="search-btn">🔍</button>
-    <ul id="suggestions-list"></ul>
+<div class="search-container">
+  <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
+  <button id="search-btn">🔍</button>
+  <ul id="suggestions-list"></ul>
+</div>
+
+<div class="playlist-buttons">
+  <button id="hindi-btn" class="control-button">Hindi</button>
+  <button id="english-btn" class="control-button">English</button>
+  <button id="marathi-btn" class="control-button">Marathi</button>
+</div>
+
+<div class="music-banner">
+  <div class="cover">
+    <img id="cover-image" src="cover1.jpg" alt="Album Cover">
+  </div>
+  <div class="song-details">
+    <h2 id="song-title">Song Title 1</h2>
+    <p id="artist-name">Artist Name 1</p>
   </div>
 
-  <div class="playlist-buttons">
-    <button id="hindi-btn" class="control-button">Hindi</button>
-    <button id="english-btn" class="control-button">English</button>
-    <button id="marathi-btn" class="control-button">Marathi</button>
+  <div class="progress-container">
+    <span id="current-time">0:00</span>
+    <div id="progress-bar">
+      <div id="progress"></div>
+    </div>
+    <span id="duration">0:00</span>
   </div>
 
-  <div class="quality-selection">
-    <label for="quality">Streaming Quality:</label>
-    <select id="quality">
-      <option value="low">Low (128kbps)</option>
-      <option value="medium" selected>Medium (192kbps)</option>
-      <option value="high">High (320kbps)</option>
+  <div class="controls">
+    <button id="prev" class="control-btn">⏮️</button>
+    <button id="play-pause" class="control-btn play">▶️</button>
+    <button id="next" class="control-btn">⏭️</button>
+  </div>
+
+  <div class="secondary-controls">
+    <button id="shuffle-btn">🔀</button>
+    <button id="repeat-btn">🔁</button>
+    <button id="download-btn">⬇️</button> <!-- New Download Button -->
+  </div>
+
+  <div class="quality-options">
+    <label for="quality-select">Quality: </label>
+    <select id="quality-select">
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
     </select>
   </div>
+</div>
 
-  <div class="music-banner">
-    <div class="cover">
-      <img id="cover-image" src="cover1.jpg" alt="Album Cover">
-    </div>
-    <div class="song-details">
-      <h2 id="song-title">Song Title 1</h2>
-      <p id="artist-name">Artist Name 1</p>
-    </div>
-
-    <div class="progress-container">
-      <span id="current-time">0:00</span>
-      <div id="progress-bar">
-        <div id="progress"></div>
-      </div>
-      <span id="duration">0:00</span>
-    </div>
-
-    <div class="controls">
-      <button id="prev" class="control-btn">⏮️</button>
-      <button id="play-pause" class="control-btn play">▶️</button>
-      <button id="next" class="control-btn">⏭️</button>
-    </div>
-
-    <div class="secondary-controls">
-      <button id="shuffle-btn">🔀</button>
-      <button id="repeat-btn">🔁</button>
-      <button id="download-btn">⬇️</button>
-    </div>
-  </div>
-
-  <audio id="audio"></audio>
-  <script type="module" src="main.js"></script>
+<audio id="audio"></audio>
+<script type="module" src="main.js"></script>
 </body>
 </html>
