--- a/index.html
+++ b/index.html
@@ -3,61 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music45</title>
+  <title>Music Player</title>
   <link rel="icon" type="image/webp" href="music/music45.webp">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="search-container">
-    <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
-    <div class="search-controls">
-      <button id="search-btn">🔍</button>
-      <select id="quality-select">
-        <option value="low">Low</option>
-        <option value="medium">Medium</option>
-        <option value="high" selected>High</option>
-      </select>
-    </div>
-    <ul id="suggestions-list"></ul>
+
+<!-- Search Section -->
+<div class="search-container">
+  <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
+  <button id="search-btn">🔍</button>
+  <ul id="suggestions-list"></ul>
+</div>
+
+<!-- Playlist Selection Section -->
+<div class="playlist-buttons">
+  <button id="hindi-btn" class="control-button">Hindi</button>
+  <button id="english-btn" class="control-button">English</button>
+  <button id="marathi-btn" class="control-button">Marathi</button>
+</div>
+
+<!-- Music Player Section -->
+<div class="music-banner">
+  <!-- Cover Image -->
+  <div class="cover">
+    <img id="cover-image" src="cover1.jpg" alt="Album Cover">
   </div>
 
-  <div class="playlist-buttons">
-    <button id="hindi-btn" class="control-button">Hindi</button>
-    <button id="english-btn" class="control-button">English</button>
-    <button id="marathi-btn" class="control-button">Marathi</button>
+  <!-- Song Title and Artist Name -->
+  <div class="song-details">
+    <h2 id="song-title">Song Title 1</h2>
+    <p id="artist-name">Artist Name 1</p>
   </div>
 
-  <div class="music-banner">
-    <div class="cover">
-      <img id="cover-image" src="cover1.jpg" alt="Album Cover">
+  <!-- Progress Bar -->
+  <div class="progress-container">
+    <span id="current-time">0:00</span>
+    <div id="progress-bar">
+      <div id="progress"></div>
     </div>
-    <div class="song-details">
-      <h2 id="song-title">Song Title 1</h2>
-      <p id="artist-name">Artist Name 1</p>
-    </div>
-
-    <div class="progress-container">
-      <span id="current-time">0:00</span>
-      <div id="progress-bar">
-        <div id="progress"></div>
-      </div>
-      <span id="duration">0:00</span>
-    </div>
-
-    <div class="controls">
-      <button id="prev" class="control-btn">⏮️</button>
-      <button id="play-pause" class="control-btn play">▶️</button>
-      <button id="next" class="control-btn">⏭️</button>
-    </div>
-
-    <div class="secondary-controls">
-      <button id="shuffle-btn">🔀</button>
-      <button id="repeat-btn">🔁</button>
-      <button id="download-btn">⬇️</button> <!-- New Download Button -->
-    </div>
+    <span id="duration">0:00</span>
   </div>
 
-  <audio id="audio"></audio>
-  <script type="module" src="main.js"></script>
+  <!-- Controls -->
+  <div class="controls">
+    <button id="prev" class="control-btn">⏮️</button>
+    <button id="play-pause" class="control-btn play">▶️</button>
+    <button id="next" class="control-btn">⏭️</button>
+  </div>
+
+  <!-- Secondary Controls -->
+  <div class="secondary-controls">
+    <button id="shuffle-btn">🔀</button>
+    <button id="repeat-btn">🔁</button>
+    <button id="download-btn">⬇️</button> <!-- Download button -->
+  </div>
+
+  <!-- Quality Selection -->
+  <div class="quality-selection">
+    <select id="quality-select">
+      <option value="high">High</option>
+      <option value="medium">Medium</option>
+      <option value="low">Low</option>
+    </select>
+  </div>
+</div>
+
+<audio id="audio"></audio>
+
+<script type="module" src="main.js"></script>
+
 </body>
 </html>
