--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
     <button id="marathi-btn" class="control-button">Marathi</button>
   </div>
 
-  <!-- Search Bar -->
   <div class="search-container">
     <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
     <button id="search-btn">🔍</button>
     <ul id="suggestions-list"></ul>
   </div>
 
-  <!-- Music Banner -->
   <div class="music-banner">
     <div class="cover">
       <img id="cover-image" src="cover1.jpg" alt="Album Cover">
@@ -57,6 +55,6 @@
   </div>
 
   <audio id="audio"></audio>
-  <script type="module" src="script.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
