--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <button id="hindi-btn" class="control-button">Hindi</button>
     <button id="english-btn" class="control-button">English</button>
     <button id="marathi-btn" class="control-button">Marathi</button>
+    <button id="telugu-btn" class="control-button">Telugu</button>
   </div>
 
   <div class="search-container">
