--- a/11index.html
+++ b/11index.html
@@ -1,52 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Music Player</title>
-  <link rel="icon" type="image/webp" href="music/musiclogo.webp">
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Music Player</title>
+    <link rel="stylesheet" href="11styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-<div class="search-container">
-  <input type="text" id="search-bar" placeholder="Search for a song or artist..." />
-  <button id="search-btn">🔍</button>
-  <ul id="suggestions-list"></ul>
+  <audio id="audio" src="/music/hindi/Aankhon Mein Doob Jaane Ko - THE 9TEEN, Sandesh Shandilya.m4a"></audio>
+    <div class="music-player">
+        <div class="player-container">
+            <div class="player-container">
+                <!-- Add this close button just inside the player-container -->
+                <button class="close-btn" aria-label="Close music player">
+                    <i class="fas fa-times"></i>
+                </button>
+            <!-- Album Art -->
+            <div class="album-cover">
+                <img src="https://c.saavncdn.com/730/Aankhon-Mein-Doob-Jaane-Ko-Hindi-2024-20240816183310-500x500.jpg" alt="Album art for Baban">
+            </div>
+
+            <!-- Song Info -->
+            <div class="song-info">
+                <h2>Saaj Hyo Tuza</h2>
+                <p>Onkarswaroop, Suhas Munde</p>
+            </div>
+
+            <!-- Update the progress bar div -->
+<div class="progress-container">
+  <div class="progress-bar">
+      <div id="progress" class="progress"></div>
+  </div>
+  <div class="time-stamps">
+      <span id="current-time">00:00</span>
+      <span id="duration">00:00</span>
+  </div>
 </div>
+            <!-- Main Controls -->
+            <div class="main-controls">
+                <button class="control-btn"><i class="fas fa-shuffle"></i></button>
+                <button class="control-btn"><i class="fas fa-backward"></i></button>
+                <button id="play-btn" class="play-btn"><i class="fas fa-play"></i></button>
+                <button class="control-btn"><i class="fas fa-forward"></i></button>
+                <button class="control-btn"><i class="fas fa-repeat"></i></button>
+            </div>
 
-<div class="music-banner">
-  <div class="cover">
-    <img id="cover-image" src="cover1.jpg" alt="Album Cover">
-  </div>
-  <div class="song-details">
-    <h2 id="song-title">Song Title 1</h2>
-    <p id="artist-name">Artist Name 1</p>
-  </div>
+            <!-- Secondary Controls -->
+            <div class="secondary-controls">
+                <button class="control-btn"><i class="fas fa-music"></i></button>
+                <button class="control-btn"><i class="fas fa-download"></i></button>
+                <button class="control-btn"><i class="fas fa-heart"></i></button>
+                <button class="control-btn"><i class="fas fa-clock-rotate-left"></i></button>
+            </div>
 
-  <div class="progress-container">
-    <span id="current-time">0:00</span>
-    <div id="progress-bar">
-      <div id="progress"></div>
+            <!-- Bottom Buttons -->
+            <div class="bottom-buttons">
+                <button class="action-btn">
+                    <i class="fas fa-list"></i>
+                    Queue
+                </button>
+                <button class="action-btn">
+                    <i class="fas fa-microphone"></i>
+                    Lyrics
+                </button>
+            </div>
+        </div>
     </div>
-    <span id="duration">0:00</span>
-  </div>
-
-  <div class="controls">
-    <button id="prev" class="control-btn">⏮️</button>
-    <button id="play-pause" class="control-btn play">▶️</button>
-    <button id="next" class="control-btn">⏭️</button>
-  </div>
-
- <!-- Replace the Like button with Download button -->
-<div class="secondary-controls">
-  <button id="shuffle-btn">🔀</button>
-  <button id="repeat-btn">🔁</button>
-  <button id="download-btn">⬇️</button> <!-- New Download Button -->
-</div>
-
-</div>
-
-<audio id="audio"></audio>
-<script type="module" src="main.js"></script>
+    <script>
+      const audio = document.getElementById('audio');
+      const playBtn = document.getElementById('play-btn');
+      const progress = document.getElementById('progress');
+      const progressBar = document.querySelector('.progress-bar');
+      const currentTimeEl = document.getElementById('current-time');
+      const durationEl = document.getElementById('duration');
+  
+      // Play/Pause functionality
+      playBtn.addEventListener('click', () => {
+          if (audio.paused) {
+              audio.play();
+              playBtn.innerHTML = '<i class="fas fa-pause"></i>';
+          } else {
+              audio.pause();
+              playBtn.innerHTML = '<i class="fas fa-play"></i>';
+          }
+      });
+  
+      // Update progress bar
+      audio.addEventListener('timeupdate', updateProgress);
+  
+      function updateProgress() {
+          const { currentTime, duration } = audio;
+          const progressPercent = (currentTime / duration) * 100;
+          progress.style.width = `${progressPercent}%`;
+          
+          currentTimeEl.textContent = formatTime(currentTime);
+          durationEl.textContent = formatTime(duration);
+      }
+  
+      // Set progress bar on click
+      progressBar.addEventListener('click', setProgress);
+  
+      function setProgress(e) {
+          const width = this.clientWidth;
+          const clickX = e.offsetX;
+          const duration = audio.duration;
+          audio.currentTime = (clickX / width) * duration;
+      }
+  
+      // Format time to MM:SS
+      function formatTime(seconds) {
+          const minutes = Math.floor(seconds / 60);
+          const remainingSeconds = Math.floor(seconds % 60);
+          return `${minutes.toString().padStart(2, '0')}:${remainingSeconds.toString().padStart(2, '0')}`;
+      }
+  
+      // Set duration when metadata is loaded
+      audio.addEventListener('loadedmetadata', () => {
+          durationEl.textContent = formatTime(audio.duration);
+      });
+  </script>
 </body>
 </html>
