--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music45</title>
   <link rel="icon" type="image/webp" href="music/music45.webp">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="stylesheet" href="styles89.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <!-- Menu Button -->
@@ -25,37 +27,68 @@
     <ul id="suggestions-list"></ul>
   </div>
 
-  <div class="music-banner">
-    <div class="cover">
-      <img id="cover-image" src="cover1.jpg" alt="Album Cover">
+  <!-- Song List Section -->
+  <div class="song-list-container">
+    <h3 id="playlist-name">Current Playlist: </h3>
+    <ul id="song-list">
+      <!-- Songs will be dynamically added here -->
+    </ul>
+  </div>
+
+ <!-- Main Content (Footer) -->
+ <div id="footer-controls" class="footer-controls">
+  <div id="footer-song-info" class="footer-song-info">
+    <img id="footer-cover-image" class="footer-cover" src="cover1.jpg" alt="Cover" />
+    <p id="footer-song-title">Song Title 1</p>
+    <p id="footer-artist-name">Artist Name 1</p>
+  </div>
+  <div class="footer-controls-buttons">
+    <button id="footer-play-pause" class="footer-play-pause-btn">▶️</button>
+  </div>
+</div>
+
+  <!-- Music Banner (initially hidden) -->
+  <div id="music-banner" class="music-player" style="display:none;">
+    <div class="player-container">
+    <button id="close-banner-btn" class="close-btn" style="position: absolute; top: 10px; right: 10px;" ><i class="fas fa-times"></i></button>
+    <div class="album-cover">
+      <img id="banner-cover-image" class="banner-cover" src="cover1.jpg" alt="Album Cover">
     </div>
-    <div class="song-details">
-      <h2 id="song-title">Song Title 1</h2>
-      <p id="artist-name">Artist Name 1</p>
+    <div class="song-info">
+      <h2 id="banner-song-title">Song Title 1</h2>
+      <p id="banner-artist-name">Artist Name 1</p>
     </div>
 
     <div class="progress-container">
-      <span id="current-time">0:00</span>
-      <div id="progress-bar">
-        <div id="progress"></div>
+      <div class="progress-bar" id="progress-bar">
+          <div id="progress" class="progress"></div>
       </div>
-      <span id="duration">0:00</span>
+      <div class="time-stamps">
+          <span id="current-time">00:00</span>
+          <span id="duration">00:00</span>
+      </div>
     </div>
 
-    <div class="controls">
-      <button id="prev" class="control-btn">⏮️</button>
-      <button id="play-pause" class="control-btn play">▶️</button>
-      <button id="next" class="control-btn">⏭️</button>
+    <div class="main-controls">
+      <button id="shuffle-btn" class="control-btn"><i class="fas fa-shuffle"></i></button>
+      <button id="prev" class="control-btn"><i class="fas fa-backward"></i></button>
+      <button id="banner-play-pause" class="play-btn"><i class="fas fa-play"></i></button>
+      <button id="next" class="control-btn"><i class="fas fa-forward"></i></button>
+      <button id="repeat-btn" class="control-btn"><i class="fas fa-repeat"></i></button>
     </div>
 
     <div class="secondary-controls">
-      <button id="shuffle-btn">🔀</button>
-      <button id="repeat-btn">🔁</button>
-      <button id="download-btn">⬇️</button>
+      <button class="control-btn"><i class="fas fa-music"></i></button>
+      <button id="download-btn" class="control-btn"><i class="fas fa-download"></i></button>
+      <button class="control-btn"><i class="fas fa-heart"></i></button>
+      <button class="control-btn"><i class="fas fa-clock-rotate-left"></i></button>
+    </div>
     </div>
   </div>
+ 
+
 
   <audio id="audio"></audio>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="banner.js"></script>
 </body>
 </html>
