--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Music45</title>
   <link rel="icon" type="image/webp" href="music/music45.webp">
   <link rel="manifest" href="/manifest.json">
-  <link rel="stylesheet" href="styles89.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
