--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
       <button id="banner-play-pause" class="play-btn"><i class="fas fa-play"></i></button>
       <button id="next" class="control-btn"><i class="fas fa-forward"></i></button>
       <button id="repeat-btn" class="control-btn"><i class="fas fa-repeat"></i></button>
-    </div>
+      
+      
+      <div id="shuffle-popup">Shuffle: <span id="shuffle-status">OFF</span></div>
+      <div id="repeat-popup" class="popup">Repeat: <span id="repeat-status"></span></div>    </div>
 
     <div class="secondary-controls">
       <button class="control-btn"><i class="fas fa-music"></i></button>
