--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
       <button id="repeat-btn" class="control-btn"><i class="fas fa-repeat"></i></button>
       
       
-      <div id="shuffle-popup">Shuffle: <span id="shuffle-status">OFF</span></div>
-      <div id="repeat-popup" class="popup">Repeat: <span id="repeat-status"></span></div>    </div>
+      <div id="shuffle-popup" class="popup">Shuffle: <span id="shuffle-status"></span></div>
+      <div id="repeat-popup" class="popup">Repeat: <span id="repeat-status"></span></div>  
+ </div>
 
     <div class="secondary-controls">
       <button class="control-btn"><i class="fas fa-music"></i></button>
