--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
   <!-- Music Banner (initially hidden) -->
   <div id="music-banner" class="music-player" style="display:none;">
     <div class="player-container">
-    <button id="close-banner-btn" class="close-btn" style="position: absolute; top: 10px; right: 10px;" ><i class="fas fa-times"></i></button>
+      <button id="close-banner-btn" class="close-btn">
+        <i class="fas fa-chevron-down"></i>
+    </button>
     <div class="album-cover">
       <img id="banner-cover-image" class="banner-cover" src="cover1.jpg" alt="Album Cover">
     </div>
